# xg

./: .gitmodules  CMakeLists.txt
app/xgmario/: main.c
lib/file/: file.c  file.h
lib/gfx/: gfx.c  gfx.h
lib/input/: input.c  input.h
lib/os/: os.c  os.h
